--- a/package.json
+++ b/package.json
@@ -19,23 +19,24 @@
     "git"
   ],
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "load-grunt-tasks": "^0.4.0",
-    "jshint-stylish": "^0.2.0",
-    "grunt-mocha-cov": "~0.2.1",
-    "chai": "~1.9.1",
-    "sinon": "~1.10.3",
-    "grunt-codeclimate": "0.0.1-1",
-    "nock": "~0.46.0",
+    "chai": "^2.2.0",
     "esformatter-braces": "~1.0.0",
-    "esformatter-semicolons": "~1.0.3"
+    "esformatter-semicolons": "~1.0.3",
+    "grunt": "^0.4.5",
+    "grunt-codeclimate": "0.0.1",
+    "grunt-contrib-jshint": "^0.11.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-cov": "^0.4.0",
+    "jshint-stylish": "^1.0.1",
+    "load-grunt-tasks": "^3.1.0",
+    "nock": "^1.4.0",
+    "sinon": "^1.14.1"
   },
   "dependencies": {
-    "sweetp-base": "~1.0.0",
-    "lodash": "~2.4.1",
     "async": "~0.9.0",
-    "debug": "~2.1.0"
+    "debug": "~2.1.0",
+    "lodash": "^3.6.0",
+    "sweetp-base": "~1.0.0"
   },
   "config": {
     "blanket": {
